--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <div class="container-fluid pt-5" style="background-color:#100a27 ;">
+        <div class="container-fluid pt-5" style="background-color:#060121 ;">
           <div class="row">
             <div class="col-md-6 col-sm-12">
               <img class="img-fluid" src="./images/the-road.png" alt="the road">
@@ -81,22 +81,94 @@
           </div>
         </div>
       
-        <div class="container-fluid pt-5" style="background-color: #100a27;">
+        <div class="container-fluid pt-5" style="background-color: #060121;">
           <div class="row">
             <div class="col-md-12 text-white">
                 <h2 class="text-center landscape">METAVERSE </br> COMPETITIVE LANDSCAPE</h2>
                 <div>
-                <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-
+                  <ul class="gaming d-flex justify-content-around">
+                    <li> <i class="fa-solid fa-circle-chevron-left fa-2xl"></i></li>
+                    <li><img src="./images/metaverse-competitive-landscape/icn-1.png" alt=""><p>GAMING, AR &</br> VR HARDWARE</p></li>
+                    <li><img src="./images/metaverse-competitive-landscape/icn-1.png" alt=""><p>DESIGN SOFTWARE </br>VENDORS</p></li>
+                    <li><img src="./images/metaverse-competitive-landscape/icn-1.png" alt=""><p>ONLINE GAME</br> MAKERS</p></li>
+                    <li><img src="./images/metaverse-competitive-landscape/icn-1.png" alt=""><p>LIVE</br> ENTARINMENT</p></li>
+                    <li><img src="./images/metaverse-competitive-landscape/icn-1.png" alt=""><p>SOCIAL</br> NETWORKING</p></li>
                 <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
+                </ul>
                 </div>
             </div>
           </div>
         </div>
 
+        <div class="container-fluid" style="background-color:#060121 ;">
+          <div class="row cards">
+            <div class="col-md-4">
+              <div class="card blue-border" style="width: 100%;">
+                <div class="card-body">
+                  <h5 class="card-title">THE </br>FUTURE</h5>
+                  <p class="card-text">The Metaverse concept has already made its way
+                    around the IJAE. with a number of companies
+                    attempting to bring it to life by incorporating social
+                    networking. investment. business. NFT creation
+                    and trade. virtual real estate. gaming.
+                    entertainment. and shopping within an immersive
+                    virtual reality environment</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card pink-border" style="width: 100%;">
+                <div class="card-body">
+                  <h5 class="card-title">MULTICULTURAL </br>IN EVERY WAY</h5>
+                  <p class="card-text">Dubai is a world-renowned international city that
+                    consistently ranks in the top 10 of the worlds first
+                    tier cities throughout the year. Most notably. 85 per
+                    cent of the population is made up of people from
+                    over 200 different countries around the world
+                    bringing the worlds diverse cultures for all
+                    sorts of opportunity.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card blue-border" style="width: 100%;">
+                <div class="card-body">
+                  <h5 class="card-title">MOVING </br>FORWARD</h5>
+                  <p class="card-text">Dubai is in a rapid developnnent rhythm with
+                    each passing day passing with proposed smart
+                    cities applying blockchain technology to
+                    infrastructure. governmental and public services
+                    allowing potential developments of virtual world
+                    with a grand vision like Metaverse.</br>&nbsp;</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       
-
+<div class="container-fluid pt-5 team">
+  <div class="row">
+    <div class="col-md-3">
+    <div class="card blue-bg" style="width: 20rem;">
+      <div class="card-body">
+        <p class="card-text">The Metaverse concept has
+          already made its way around the
+          UAE. with a number of companies
+          attempting to bring it to life by
+          incorporating social networking,
+          investment. business.</p>
+      </div>
+    </div>
+    <div class="ps-3 pt-2">
+      <h2 class="name">DR. SANA FARID</h2>
+      <p class="designation">Co-Chasir Healthcare Committee. </br>
+        VR/AR</p>
+        <p class="location">UNITED ARAB EMIRATES</p>
+        </div>
+    </div>
+  </div>
+</div>
 
 
 
